--- a/src/templates/css/site.less
+++ b/src/templates/css/site.less
@@ -3,6 +3,7 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
+  word-wrap: break-word;
 }
 
 html {
